--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -7,39 +7,37 @@
   "license": "ISC",
   "scripts": {
     "start": "concurrently \"npm run build-dev\" \"webpack-dev-server --hot --inline --port 8080\" ",
-
     "build-dev": "set NODE_ENV=development && webpack",
     "build-production": "set NODE_ENV=production && webpack",
-
     "watch-dev": "set NODE_ENV=development && webpack --watch --color",
     "watch-production": "npm run build-production --watch --color",
-
     "dotnet-build": "dotnet build",
     "dotnet-web": "dotnet web",
     "publish-for-iis": "npm run build-production && dotnet publish -c Release",
     "test": "karma start"
   },
   "dependencies": {
+    "@angular/animations": "4.1.0",
     "@angular/common": "4.1.0",
     "@angular/compiler": "4.1.0",
     "@angular/compiler-cli": "4.1.0",
-    "@angular/platform-server": "4.1.0",
     "@angular/core": "4.1.0",
     "@angular/forms": "4.1.0",
     "@angular/http": "4.1.0",
     "@angular/platform-browser": "4.1.0",
     "@angular/platform-browser-dynamic": "4.1.0",
+    "@angular/platform-server": "4.1.0",
     "@angular/router": "4.1.0",
     "@angular/upgrade": "4.1.0",
-    "@angular/animations": "4.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "angular-in-memory-web-api": "0.3.1",
+    "bootstrap": "^3.3.7",
     "core-js": "2.4.1",
+    "ie-shim": "~0.1.0",
+    "jquery": "^3.2.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.3.0",
-    "zone.js": "0.8.8",
-    "bootstrap": "^3.3.7",
-    "ie-shim": "~0.1.0",
-    "jquery": "^3.2.1"
+    "zone.js": "0.8.8"
   },
   "devDependencies": {
     "@types/node": "7.0.13",
@@ -49,10 +47,8 @@
     "rimraf": "^2.6.1",
     "typescript": "2.3.2",
     "ts-helpers": "^1.1.2",
-
     "tslint": "^5.1.0",
     "tslint-loader": "^3.5.2",
-
     "webpack": "^2.4.1",
     "webpack-dev-server": "2.4.2",
     "clean-webpack-plugin": "^0.1.16",
@@ -69,7 +65,6 @@
     "file-loader": "^0.11.1",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.1",
-
     "jasmine-core": "2.5.2",
     "karma": "1.6.0",
     "karma-chrome-launcher": "2.0.0",
