--- a/Blades.Web/Blades.Web.csproj
+++ b/Blades.Web/Blades.Web.csproj
@@ -57,10 +57,8 @@
     <None Include="webpack.dev.js" />
     <None Include="webpack.helpers.js" />
     <None Include="webpack.prod.js" />
+    <None Include="wwwroot\app.css" />
     <None Include="yarn.lock" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
