--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -6,14 +6,14 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "concurrently \"webpack-dev-server --hot --inline --port 8080\" \"dotnet run ASPNETCORE_ENVIRONMENT=Development\"",
+    "start": "concurrently \"npm run build-dev \" \"webpack-dev-server --hot --inline --port 8080\" \"dotnet run ASPNETCORE_ENVIRONMENT=Development\"",
 
     "build-dev": "concurrently \"set NODE_ENV=development && webpack\" \"dotnet build\" ",
     "build-production": "concurrently \"set NODE_ENV=production && webpack\" \"dotnet build\" ",
 
     "watch-dev": "set NODE_ENV=development && webpack --watch --color",
     "watch-production": "npm run build-production --watch --color",
-        
+
     "publish-for-iis": "npm run build-production && dotnet publish -c Release",
     "test": "karma start"
   },
@@ -42,7 +42,7 @@
     "jquery": "^3.2.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.3.0",
-    "zone.js": "0.8.8"
+    "zone.js": "0.8.7"
   },
   "devDependencies": {
     "@types/node": "7.0.13",
