fix: designer layout

--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,4 @@ __pycache__/
 # End of https://www.gitignore.io/api/node,visualstudio,visualstudiocode
 /Blades.Web/app/components/blade
 /Blades.Web/app/components/blade/components
+/Blades.Web/app/components
