--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "concurrently \"npm run build-dev \" \"webpack-dev-server --hot --inline --port 8080\" \"dotnet run ASPNETCORE_ENVIRONMENT=Development\"",
+    "start": "concurrently \"npm run build-dev \" \"webpack-dev-server --hot --inline --port 8080\" \"dotnet watch run ASPNETCORE_ENVIRONMENT=Development\"",
 
     "build-dev": "concurrently \"set NODE_ENV=development && webpack\" \"dotnet build\" ",
     "build-production": "concurrently \"set NODE_ENV=production && webpack\" \"dotnet build\" ",
