--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -7,13 +7,10 @@
   "license": "ISC",
   "scripts": {
     "start": "concurrently \"npm run build-dev \" \"webpack-dev-server --hot --inline --port 8080\" \"dotnet watch run ASPNETCORE_ENVIRONMENT=Development\"",
-
     "build-dev": "concurrently \"set NODE_ENV=development && webpack\" \"dotnet build\" ",
     "build-production": "concurrently \"set NODE_ENV=production && webpack\" \"dotnet build\" ",
-
     "watch-dev": "set NODE_ENV=development && webpack --watch --color",
     "watch-production": "npm run build-production --watch --color",
-
     "publish-for-iis": "npm run build-production && dotnet publish -c Release",
     "test": "karma start"
   },
@@ -40,6 +37,7 @@
     "devextreme-angular": "17.1.2-beta.1",
     "ie-shim": "~0.1.0",
     "jquery": "^3.2.1",
+    "ng2-select": "^1.2.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.3.0",
     "zone.js": "0.8.7"
