--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -43,37 +43,38 @@
     "zone.js": "0.8.7"
   },
   "devDependencies": {
-    "@types/node": "7.0.13",
     "@types/jasmine": "2.5.47",
-    "concurrently": "^3.4.0",
-    "node-sass": "^4.5.2",
-    "rimraf": "^2.6.1",
-    "typescript": "2.3.2",
-    "ts-helpers": "^1.1.2",
-    "tslint": "^5.1.0",
-    "tslint-loader": "^3.5.2",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "2.4.2",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^2.28.0",
-    "url-loader": "^0.5.8",
-    "style-loader": "^0.16.1",
-    "json-loader": "^0.5.4",
-    "sass-loader": "^6.0.3",
-    "angular2-template-loader": "0.6.2",
+    "@types/node": "7.0.13",
     "angular-router-loader": "^0.6.0",
+    "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.1.2",
+    "clean-webpack-plugin": "^0.1.16",
+    "concurrently": "^3.4.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
-    "raw-loader": "^0.5.1",
-    "source-map-loader": "^0.2.1",
+    "html-webpack-plugin": "^2.28.0",
     "jasmine-core": "2.5.2",
+    "json-loader": "^0.5.4",
     "karma": "1.6.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-jasmine": "1.1.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "2.0.3"
+    "karma-webpack": "2.0.3",
+    "node-sass": "^4.5.2",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.16.1",
+    "ts-helpers": "^1.1.2",
+    "tslint": "^5.1.0",
+    "tslint-loader": "^3.5.2",
+    "typescript": "2.3.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "2.4.2"
   }
 }
