--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -30,6 +30,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "@ng2-dynamic-forms/core": "^1.4.9",
     "@ng2-dynamic-forms/ui-ng-bootstrap": "^1.4.9",
+    "@types/underscore": "^1.8.1",
     "angular-in-memory-web-api": "0.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "2.4.1",
@@ -40,6 +41,7 @@
     "ng2-select": "^1.2.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.3.0",
+    "underscore": "^1.8.3",
     "zone.js": "0.8.7"
   },
   "devDependencies": {
