replace the gridster

--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -31,8 +31,8 @@
     "@ng2-dynamic-forms/core": "^1.4.9",
     "@ng2-dynamic-forms/ui-ng-bootstrap": "^1.4.9",
     "@types/underscore": "^1.8.1",
+    "angular-gridster2": "^2.10.4",
     "angular-in-memory-web-api": "0.3.1",
-    "angular2gridster": "^0.5.3",
     "bootstrap": "^3.3.7",
     "core-js": "2.4.1",
     "devextreme": "17.1.2-beta",
