--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -35,8 +35,8 @@
     "angular-in-memory-web-api": "0.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "2.4.1",
-    "devextreme": "17.1.2-beta",
-    "devextreme-angular": "17.1.2-beta.1",
+    "devextreme": "^17.1.2-beta",
+    "devextreme-angular": "^17.1.2-beta.1",
     "ie-shim": "~0.1.0",
     "jquery": "^3.2.1",
     "ng2-select": "^1.2.0",
