--- a/Blades.Web/package.json
+++ b/Blades.Web/package.json
@@ -13,7 +13,7 @@
     "watch-production": "npm run build-production --watch --color",
     "publish-for-iis": "npm run build-production && dotnet publish -c Release",
     "test": "karma start",
-    "vendorjs":"webpack --config webpack.config.vendor.js"
+    "vendorjs": "webpack --config webpack.config.vendor.js"
   },
   "dependencies": {
     "@angular/animations": "4.1.2",
@@ -27,33 +27,29 @@
     "@angular/platform-server": "4.1.2",
     "@angular/router": "4.1.2",
     "@angular/upgrade": "4.1.0",
-     
-    "event-source-polyfill": "0.0.9",
-    "zone.js": "0.8.10",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.0",
-    "es6-shim": "0.35.3",
-    "ie-shim": "~0.1.0",
-    "core-js": "2.4.1",
-
-    "aspnet-prerendering": "^2.0.5",
-    "aspnet-webpack": "^1.0.29",
-   
-    "jquery": "3.2.1",
-    "bootstrap": "3.3.7",
-    "underscore": "^1.8.3",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "angular-gridster2": "^2.10.4",
+    "aspnet-prerendering": "^2.0.5",
+    "aspnet-webpack": "^1.0.29",
+    "bootstrap": "3.3.7",
+    "core-js": "2.4.1",
     "devextreme": "^17.1.2-beta",
-    "devextreme-angular": "^17.1.2-beta.1"
-    
+    "devextreme-angular": "^17.1.2-beta.1",
+    "es6-shim": "0.35.3",
+    "event-source-polyfill": "0.0.9",
+    "font-awesome": "^4.7.0",
+    "ie-shim": "~0.1.0",
+    "jquery": "3.2.1",
+    "reflect-metadata": "0.1.10",
+    "rxjs": "5.4.0",
+    "underscore": "^1.8.3",
+    "zone.js": "0.8.10"
   },
   "devDependencies": {
     "@types/node": "7.0.18",
     "@types/underscore": "^1.8.1",
     "@types/chai": "3.5.2",
     "@types/jasmine": "2.5.47",
-    
     "typescript": "2.3.2",
     "concurrently": "^3.4.0",
     "node-sass": "^4.5.2",
@@ -61,7 +57,6 @@
     "css": "2.2.1",
     "isomorphic-fetch": "2.2.1",
     "preboot": "4.5.2",
-     
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.0",
     "webpack-dev-server": "2.4.2",
@@ -84,8 +79,6 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
-    
-    
     "chai": "3.5.0",
     "jasmine-core": "2.6.1",
     "karma": "1.7.0",
@@ -96,7 +89,6 @@
     "karma-webpack": "2.0.3",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.31",
-       
     "ts-helpers": "^1.1.2",
     "tslint": "^5.1.0",
     "tslint-loader": "^3.5.2"
