refactor app -> add public route

--- a/Blades.Web/Blades.Web.csproj
+++ b/Blades.Web/Blades.Web.csproj
@@ -74,6 +74,9 @@
     <DependentUpon>new-control.component.html</DependentUpon>
   </None>
 </ItemGroup>
+<ItemGroup>
+  <Folder Include="ClientApp\app\components\blades\components\" />
+</ItemGroup>
   <Target Name="RunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec Command="npm install" />
